crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_stmt_empty.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_stmt_empty.py
---
## AST

```
Module(
    ModModule {
        range: 0..7,
        body: [
            Import(
                StmtImport {
                    range: 0..6,
                    names: [],
                },
            ),
        ],
    },
)
```
## Errors

error: Invalid syntax
  |
1 | import
  |       ^ Expected one or more symbol names after import
  |
